// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag test should render a snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-7el6ft"
    data-testid="flag"
  >
    <span
      class="css-14u1cgq"
    >
      COMPLETE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Flag test should render a snapshot with label in progress 1`] = `
<DocumentFragment>
  <div
    class="css-7el6ft"
    data-testid="flag"
  >
    <span
      class="css-14u1cgq"
    >
      IN PROGRESS
    </span>
  </div>
</DocumentFragment>
`;
